--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 authors = ["loseardes77"]
 description = "Cli app to manage Corsair Void headsets"
 keywords = ["corsair", "void", "corsair-void", "cli", "tool"]
+license = "BSD-2"
 
 [dependencies]
 clap = { version = "4.5.27", features = ["derive"] }
