--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ license = "BSD-2"
 
 [dependencies]
 clap = { version = "4.5.27", features = ["derive"] }
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.137"
+sysfs = "0.0.2"
