--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "corsair-void-cli"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 authors = ["loseardes77"]
 description = "Cli app to manage Corsair Void headsets"
 keywords = ["corsair", "void", "corsair-void", "cli", "tool"]
 license = "BSD-2-Clause"
+repository = "https://github.com/LOSEARDES77/corsair-void-cli"
 
 [dependencies]
-clap = { version = "4.5.27", features = ["derive"] }
-serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.137"
+clap = { version = "4.5.37", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
